# clarkpytemplate

./: README.md
application/{{cookiecutter.package_name}}/: .gitignore  README.md  requirements.txt
application/{{cookiecutter.package_name}}/src/: __main__.py
base/{{cookiecutter.project_name}}/: .gitignore  README.md
base/{{cookiecutter.project_name}}/conf/: config.yml  parser.yml
base/{{cookiecutter.project_name}}/src/: __main__.py
base/{{cookiecutter.project_name}}/src/settings_manager/: parser_manager.py
forecast/: cookiecutter.json
forecast/{{cookiecutter.project_name}}/: .gitignore  README.md  requirements.txt
forecast/{{cookiecutter.project_name}}/conf/: catalog.yml  config.yml  parser.yml
forecast/{{cookiecutter.project_name}}/src/: __main__.py  log.py
forecast/{{cookiecutter.project_name}}/src/data_loader/: data_loader.py  features.py  target.py
forecast/{{cookiecutter.project_name}}/src/data_transformer/: __init__.py  data_trasformer.py
forecast/{{cookiecutter.project_name}}/src/model/: model_hub.py
forecast/{{cookiecutter.project_name}}/src/nodes/: data_processing.py  split.py
forecast/{{cookiecutter.project_name}}/src/pipeline/: train.py
package/: cookiecutter.json
package/{{cookiecutter.package_name}}/: .gitignore  Jenkinsfile  README.md  pyproject.toml
standard/: cookiecutter.json
standard/{{cookiecutter.project_name}}/: README.md
standard/{{cookiecutter.project_name}}/conf/: config.yml
standard/{{cookiecutter.project_name}}/src/settings_manager/: settings_catalog.py
(+6 files in other folders)
